# addr

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  default.nix
.github/workflows/: ci.yml
benches/: list_benchmark.rs
codegen/: Cargo.toml  README.md
codegen/src/: lib.rs
compiled/: Cargo.toml  README.md
compiled/src/: lib.rs
lexer/: Cargo.toml  README.md
lexer/src/: errors.rs  lib.rs  tests.rs
psl/: Cargo.toml  Makefile.toml  README.md  build.rs
psl/benches/: list_benchmark.rs
psl/fuzz/: Cargo.toml
psl/fuzz/fuzz_targets/: domain.rs  find.rs  suffix.rs
psl/src/: lib.rs  list.rs  serde.rs  trait_impls.rs
psl/tests/: list.rs
src/: dns.rs  dns_impls.rs  domain.rs  domain_impls.rs  email.rs  error.rs  errors.rs  host.rs  lib.rs  matcher.rs  net.rs  parser.rs  serde.rs  tests.rs
tests/: integration.rs
