[package]
name = "addr"
description = "A library for parsing domain names"
version = "0.13.1-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/addr"
documentation = "https://docs.rs/addr"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "domain", "no_std"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
psl-types = "2.0.3"

[dependencies.psl]
version = "2.0.7"
optional = true

# requires Rust v1.46
[dependencies.no-std-net]
version = "0.5.0"
default-features = false
features = ["serde"]
optional = true

[dependencies.serde]
version = "1.0.124"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.3.4"
lazy_static = "1.4.0"
psl = "2.0.7"
publicsuffix = "2.0.9"
rspec = "1.0.0"

[[bench]]
name = "list_benchmark"
harness = false

[features]
default = ["psl", "std"]
net = ["no-std-net"]
std = []

[package.metadata.docs.rs]
features = ["default", "net", "serde"]
