[package]
name = "psl-codegen"
description = "Generate native Rust code from Mozilla's Public Suffix List"
version = "0.2.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/addr"
documentation = "https://docs.rs/psl-codegen"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "domain", "psl"]
authors = ["rushmorem <rushmore@webenchanter.com>"]

[lib]
proc-macro = true

[features]
default = ["prefix"]

# Whether or not to prefix the generated types
# from the `psl` crate with the name of the crate
prefix = []

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
sequence_trie = "0.3"
idna = "0.1"

[dependencies.syn]
version = "0.14"
features = ["full"]

[dependencies.psl-lexer]
version = "0.1"
path = "../lexer"
