[package]
name = "psl-lexer"
description = "A lexer for Mozilla's Public Suffix List"
version = "0.3.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/addr/tree/master/lexer"
documentation = "https://docs.rs/psl-lexer"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "domain", "psl"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[features]
default = ["remote_list"]
remote_list = ["native-tls"]

[dependencies]
error-chain = "0.12.4"
indexmap = "1.6.1"
url = "2.2.1"

[dependencies.native-tls]
version = "0.2.7"
optional = true

[dev-dependencies]
rspec = "1.0.0"
lazy_static = "1.4.0"
