[package]
name = "psl"
description = "A native library for Mozilla's Public Suffix List"
version = "0.4.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/addr/tree/master/psl"
documentation = "https://docs.rs/psl"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "domain", "psl"]
authors = ["rushmorem <rushmore@webenchanter.com>"]

[features]
default = ["list"]
list = ["psl-codegen", "serde"]
anycase = ["psl-codegen/anycase", "list"]

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.psl-codegen]
version = "0.4"
default-features = false
path = "../codegen"
optional = true

[dev-dependencies]
psl-lexer = { version = "0.2", path = "../lexer" }
rspec = "=1.0.0-beta.4"

[build-dependencies]
rustc_version = "0.3"
