[package]
name = "psl"
description = "A native library for Mozilla's Public Suffix List"
version = "1.0.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/addr/tree/master/psl"
documentation = "https://docs.rs/psl"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "domain", "psl"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies.serde]
version = "1.0.123"
default-features = false
optional = true

[dev-dependencies]
psl-lexer = { version = "0.3", path = "../lexer" }
rspec = "1.0.0"
